--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include *.txt *.ini *.cfg *.rst
+include *.txt *.ini *.cfg *.rst *.md
 recursive-include pixiu *.ico *.png *.css *.gif *.jpg *.pt *.txt *.mak *.mako *.js *.html *.xml *.lang *.json
 recursive-include pixiu *.eot *.svg *.ttf *.woff *.woff2
 recursive-include pixiu *.pem *.csv *.plist *.ipa *.mobileprofile
